# online-survey

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  manage.py  pyproject.toml
core/apps/surveys/: admin.py  apps.py  choices.py  forms.py  models.py  reports.py  services.py  urls.py  views.py
core/apps/surveys/migrations/: 0001_initial.py  0002_alter_answer_created_at_alter_answer_updated_at_and_more.py  0002_alter_answer_question.py
core/apps/surveys/static/surveys/css/: style.css
core/apps/surveys/templates/: base.html
core/apps/surveys/templates/components/: card_list_survey.html  nav_bar.html
core/apps/surveys/templates/surveys/: index.html  success_page.html  survey_form.html  survey_list.html  survey_take_form.html
core/apps/surveys/templates/surveys/components/: admin_panel.html
core/project/: asgi.py  settings.py  urls.py  wsgi.py
