[tool.poetry]
name = "online-survey"
version = "0.1.0"
description = ""
authors = ["Kirill Shugaev <kira.krut@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
