[tool.poetry]
name = "online-survey"
version = "0.1.0"
description = ""
authors = ["Kirill Shugaev <kira.krut@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-environ = "^0.11.2"
django-nested-inline = "^0.4.6"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
